@@ -107,11 +107,6 @@ if test -z "$CXX"; then AC_CHECK_PROG(CXX, DCC, DCC) fi
 test -z "$CXX" && AC_MSG_ERROR([no acceptable C++-compiler found in \$PATH])
 
 AC_PROG_CXX_WORKS
-dnl Compaq cxx /will/ break on Debian/Linux. We work around this.
-if test e"$WEIRD_CXX" = e; then
-	AC_PROG_CXX_WORKS
-fi
-
 AC_PROG_CXX_GNU
 
 AM_DISABLE_SHARED
@@ -124,11 +119,29 @@ dnl --------------------------
 dnl Compilation environment
 dnl --------------------------
 
+AC_DEFUN(AC_CHECK_ALPHA_LINUX_CXX,
+[
+AC_MSG_CHECKING([for Alpha/Linux with DEC CXX])
+AC_TRY_RUN([
+	int main(int argc, char **argv)
+	{
+		#if defined (__DECCXX) && defined(__linux__) && defined(__alpha__)
+		return 0;
+		#endif
+		return 1;
+	}], [
+		AC_MSG_RESULT([yes])
+		AC_DEFINE(ALPHA_LINUX_CXX)
+	], AC_MSG_RESULT([no]), AC_MSG_RESULT([cross compiling- assuming \"no\"]))
+])
+
+
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS(limits.h sys/time.h unistd.h)
 AC_LANG_CPLUSPLUS
+AC_CHECK_ALPHA_LINUX_CXX
 AC_CHECK_HEADERS(hash_map hash_set)
 AC_LANG_C
 
