@@ -360,7 +360,13 @@ static void Init
 
 	// create keybinder with default bindings from exult.flx
 	keybinder = new KeyBinder;
-	keybinder->LoadDefaults();
+	try {
+		keybinder->LoadDefaults();
+	} catch (exult_exception e) {
+		cerr << "An exception occured while loading the kay bindings.\n"
+			"Please run 'make install' again, unless you have already done so.";
+		exit(1);
+	}
 
 	// Default resolution is 320x200 with 2x scaling
 	w = 320;
