@@ -88,7 +88,7 @@ char *	Flex::retrieve(uint32 objnum, size_t &len)
 	char	*buffer;
 
 	if (objnum >= object_list.size())
-		throw exult_exception("objnum too large in retrieve()");
+		throw exult_exception("objnum too large in Flex::retrieve()");
 
 	fp = U7open(filename.c_str(), "rb");
 	fseek(fp, object_list[objnum].offset, SEEK_SET);
