@@ -25,7 +25,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #ifndef INCL_ITEMS
 #define INCL_ITEMS 1
 
-#include	<iosfwd>
+#ifndef ALPHA_LINUX_CXX
+#  include	<iosfwd>
+#endif
 
 extern char **item_names;		// The game items' names.
 
